--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Guru, learning web app buiilding
+            Hi! I am Guruprasad, building web app
             
         </div>
         <script type="text/javascript" src="/ui/main.js">
