--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="I am Guruprasad. This is my web app">
-            Hi! I am Guruprasad, building web app
+            Hi! I am Guruprasad, today is 11th Feb, 2016
             
         </div>
         <script type="text/javascript" src="/ui/main.js">
