[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,10 @@
             Hi! I am Guruprasad, today is 11th Feb, 2016
             
         </div>
+        <script>
+        alert(`hi,I/`m javascript');
+        </script>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
