--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
             
         </div>
         <script>
-        alert(`hi,I\`m javascript');
+        alert('hi,I\'m javascript');
         </script>
         
         <script type="text/javascript" src="/ui/main.js">
