[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="I am Guruprasad. This is my web app">
             Hi! I am Guruprasad, today is 11th Feb, 2016
-            
+            Hi! I am back again today 13th March 2017
         </div>
         <script>
         alert('hi, I\'m javascript!');
