[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,8 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="I am Guruprasad. This is my web app">
-            Hi! I am Guruprasad, today is 11th Feb, 2016">
+        <div class=
             Hi! I am back again today 13th March 2017
         </div>
         <script>
