[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class=
-            Hi! I am back again today 13th March 2017
+            Hi! I am back again today 13th March 2017"></div>
         </div>
         <script>
         alert('hi, I\'m javascript!');
