[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,8 +8,8 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class=
-            Hi! I am back again today 13th March 2017"></div>
+        <div class="center"
+            Hi! I am back again today 13th March 2017">
         </div>
         <script>
         alert('hi, I\'m javascript!');
