--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center"
+        <div class="center text-big bold">
             Hi! I am back again today 13th March 2017">
         </div>
         <script>
