[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am back again today 13th March 2017">
-            Looks like going to be a big job">
+            Hi! Looks like going to be a big job">
         </div>
         <script>
         alert('hi, I\'m javascript!');
