--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,10 @@
         <br>
         <div class="center text-big bold">
             Hi! I am back again today 13th March 2017">
+            
             Hi! Looks like going to be a big job">
+            
+            Hi! Come what may, I shall pursue">
         </div>
         <script>
         alert('hi, I\'m javascript!');
