--- a/ui/index.html
+++ b/ui/index.html
@@ -10,9 +10,11 @@
         <br>
         <div class="center text-big bold">
             Hi! I am back again today 13th March 2017">
-            
+          </div>
+        <br>  
             Hi! Looks like going to be a big job">
-            
+          </div>
+        <br>  
             Hi! Come what may, I shall pursue">
         </div>
         <script>
