[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am back again today 13th March 2017">
           </div>
         <br>  
-            Hi! Looks like going to be a big job">
+            Hi! Ramani has come today">
           </div>
        
         <br>  
